# phantomgen

./: LICENSE  README.md  pyproject.toml
src/phantomgen/: __init__.py  core.py  test.ipynb
tests/: test_basic.py
