[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "phantomgen"
version = "0.1.1"
description = "Virtual nuclear medicine phantom generators (IEC/NEMA IQ, etc.)"
readme = "README.md"
requires-python = ">=3.9"
license = { file = "LICENSE" }
authors = [{ name = "Stathis Varzakis", email = "varzakis@gmail.com" }]
dependencies = ["numpy>=1.23"]

[project.scripts]
phantomgen = "phantomgen.core:cli"   # gives you a `phantomgen` command
